objects/npsp__Gift_Entry_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings for the NPSP Gift Entry product.</description>
    <fields>
        <fullName>npsp__Default_Gift_Entry_Template__c</fullName>
        <description>This is a starter template used for Gift Entry and can be used to enter single gifts or batches of gifts. This is the default template for entering single gifts.</description>
        <inlineHelpText>This is a starter template used for Gift Entry and can be used to enter single gifts or batches of gifts. This is the default template for entering single gifts.</inlineHelpText>
        <label>Default Gift Entry Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Enable_Gift_Entry__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables the Gift Entry tool. This feature requires Advanced Mapping.</description>
        <inlineHelpText>Enables the Gift Entry tool. This feature requires Advanced Mapping.</inlineHelpText>
        <label>Enable Gift Entry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__Enable_Recurring_Donations_in_Gift_Entry__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if Recurring Donations are available in Gift Entry.</description>
        <inlineHelpText>Indicates if Recurring Donations are available in Gift Entry.</inlineHelpText>
        <label>Enable Recurring Donations in Gift Entry</label>
        <type>Checkbox</type>
    </fields>
    <label>Gift Entry Settings</label>
</CustomObject>